src/sass/theme/reset.scss
/* ... */
.state-app_wallet {
    .footer {
        height: $small-footer-height;
        overflow: hidden;

        -webkit-transition: height 0.5s ease;
        -moz-transition: height 0.5s ease;
        -o-transition: height 0.5s ease;
        transition: height 0.5s ease;

        &:hover {
            height: $big-footer-height;
        }
    }
}

.mainMenu {
    position: relative;
    background-color: $black-light;
    height: 100%;

    ul {
        list-style: none;
        width: 100%;
        height: 100%;
        padding: 100px 0px 0px 0px;

        li {
            a {
                display: block;
                text-decoration: none;
                color: $lightgray-light;
                padding: 20px 20px 20px 30px;
                font-weight: $normal;
                font-size: 18px;
                position: relative;
                border: 0px;

                &:hover, &:active, &:focus {
                    text-decoration: none;
                    color: $white;
                    background: none;
                    background-color: $grey;
                }

                &:hover {
                    text-decoration: none;
                }

                .bticon {
                    width: auto;
                    margin: 0px;
                    padding: 0px;
                    display: inline;
                }

            }

            &.sidebar-brand {
                text-align: left;
                padding: 20px;

                a {
                    padding: 0px;
                    height: 80px;
                    font-size: 18px;
                    line-height: 60px;
                    background: none;

                    img {
                        border: 1px solid $darkgray-light;
                    }
                }

            }
            &.active {
                a {
                    font-weight: $bold;
                    @include networkPrimaryBG('background-color');
                }
            }
        }
    }

    .appStoreButtons {
        position: absolute;
        bottom: 0px;
        left: 0px;
        width: 100%;
        padding: 0px 0px 25px 25px;
        a {
            color: $muted;
            padding: 4px 6px;
            display: block;
            text-decoration: none;
        }
    }
}

.stick-to-bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

$appHeaderHeight: 80px;

.appWrapper {
    min-height: 400px;

    @extend .height-100;

    .appContainer {
        height: 100%;
        padding: 0px;
        position: relative;

        .appLeftCol, .appRightCol {
            height: 100%;
            float: left;
            position: relative;
        }

        .appLeftCol {
            width: 25%;
        }

        .appRightCol {
            width: 75%;
            padding-bottom: $appHeaderHeight;
        }

        .appBody {
            height: 100%;
            overflow-y: auto;
            overflow-x: hidden;
            background-color: $white;
            border-right: 1px solid $muted;

            .appBodyContainer {
                position: relative;
                padding-bottom: 20px;

                .appPage {
                    padding: 10px 40px 20px 40px;

                }
            }
        }

        .appHeader {
            border-bottom: 1px solid $muted;
            padding: 0px;

            height: $appHeaderHeight;
            border-right: 1px solid $muted;

            .appHeaderContent {
                padding: 20px 40px;
            }

            h1 {
                font-size: 24px;
                font-weight: $bold;
                padding: 10px 0px 10px 0px;
                margin: 0px;
                color: $darkgray-dark;

                small {
                    color: $text-muted;
                    font-size: 20px;
                }

                &.pageTitle {
                    @include networkPrimaryBG('color');
                }
            }

            span {
                font-size: 14px;
                font-weight: $normal;
                color: $darkgray-light;
            }
        }
    }
}
/* ... */

